# summarizing-movie

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Formula/: summarize-movie.rb
scripts/: release.sh
summarize_movie/: __init__.py  cli.py  diarizer.py  output.py  summarizer.py  transcriber.py
